# spakelfs

./: README.md
ngxfs_nn/: CMakeLists.txt  common.mk  config.mk  makefile  nginx.conf
ngxfs_nn/_include/: ngx_c_conf.h  ngx_c_crc32.h  ngx_c_lockmutex.h  ngx_c_memory.h  ngx_c_slogic.h  ngx_c_socket.h  ngx_c_threadpool.h  ngx_comm.h  ngx_func.h  ngx_global.h  ngx_logiccomm.h  ngx_macro.h
ngxfs_nn/app/: makefile  nginx.cxx  ngx_c_conf.cxx  ngx_log.cxx  ngx_printf.cxx  ngx_setproctitle.cxx  ngx_string.cxx
ngxfs_nn/logic/: makefile  ngx_c_slogic.cxx
ngxfs_nn/misc/: ngx_c_crc32.cxx  ngx_c_memory.cxx  ngx_c_threadpool.cxx
ngxfs_nn/net/: makefile  ngx_c_socket.cxx  ngx_c_socket_accept.cxx  ngx_c_socket_conn.cxx  ngx_c_socket_inet.cxx  ngx_c_socket_request.cxx
ngxfs_nn/proc/: ngx_daemon.cxx  ngx_event.cxx  ngx_process_cycle.cxx
ngxfs_nn/signal/: makefile  ngx_signal.cxx
